@startuml

title __CLIENT's Class Diagram__\n

  namespace client {
    class client.Client {
    }
  }
  

  namespace client {
    class client.ClientController {
    }
  }
  

  namespace client {
    namespace authentication {
      class client.authentication.Authenticator {
      }
    }
  }
  

  namespace client {
    namespace communication {
      class client.communication.ClientCommunicator {
      }
    }
  }
  

  namespace client {
    namespace tpmconntection {
      class client.tpmconntection.TrustedPlatfromModulConnector {
      }
    }
  }
  

  client.ClientController o-- client.authentication.Authenticator : authenticator
  client.ClientController o-- client.communication.ClientCommunicator : socket
  client.ClientController o-- client.tpmconntection.TrustedPlatfromModulConnector : tpmConnector
  client.authentication.Authenticator o-- client.tpmconntection.TrustedPlatfromModulConnector : tpmConnector


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
